# ai_response_system

./: .env.example  .gitignore  README.md  compose.yml  package.json  pyproject.toml  tailwind.config.js
config/: settings.py
config/settings/: base.py  development.py
docker/development/: Dockerfile
docs/: AI回答管理システム基本設計書(4名用).md  AI回答管理システム基本設計書.md  AI回答管理システム要件定義書.md
docs/実装設計書/: AI APIクライアント実装.md  APIキー管理テンプレート.md  Core機能実装 - ユーティリティクラス.md  エラーページと共通コンポーネント.md  サーバーサイド実装 - Views.md  ダッシュボード実装.md  テストコード実装.md  テンプレート実装詳細設計.md  デプロイメント設定実装.md  バックエンド実装詳細設計.md  ビュー実装詳細設計.md  ページレイアウト実装.md  質問作成ページ実装.md  質問管理ページ実装.md  質問詳細ページ実装.md  通知管理テンプレート.md
docs/詳細設計書/: AI API連携機能 詳細設計書.md  テーマ・UIコンポーネント詳細設計.md  データベース詳細設計書.md  ユーザー認証・管理機能 詳細設計書.md  画面設計 詳細設計書.md  質問・回答管理機能 詳細設計書.md
docs/開発フェーズ計画/: 開発フェーズ計画.md
