[tool.poetry]
name = "ai-response-system"
version = "0.1.0"
description = "AI Response Management System"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
mysqlclient = "^2.1.1"
redis = "^4.5.4"
celery = "^5.2.7"
django-environ = "^0.10.0"
django-redis = "^5.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-django = "^4.5.2"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
